# SPDX-FileCopyrightText: 2023 Antoine Belvire
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "crossword-composer-jni"
version = "0.1.0"
edition = "2021"

[dependencies]
catch_panic = "1.0.0"
crossword = { path = "../crossword-composer" }
jni = "0.20.0"

[lib]
crate_type = [ "cdylib" ]
