# SPDX-FileCopyrightText: 2023 Antoine Belvire
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "xwords-rs-jni"
version = "0.1.0"
edition = "2021"

[dependencies]
xwords = { version = "0.3.1", default-features = false }
jni = "0.21.0"

[patch.crates-io]
xwords = { git = "https://github.com/super7ramp/xwords-rs", branch = "croiseur" }

[lib]
crate_type = ["cdylib"]